--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Your Name / Site Title"
+site_theme               : "air" # Currently available options are "default", "air"
+title                    : "Homepage of Ruiyao Zhou"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+name                     : &name "Ruiyao Zhou"
+description              : &description "Maths Undergraduate at Imperial College London"
+url                      : https://ruiyaozhou.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Ruiyao Zhou"
+  # pronouns         : # example: "she/her"  
+  bio              : "Maths Undergraduate at Imperial College London"
+  # location         : "Earth"
+  employer         : "Imperial College London"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "rz1323@ic.ac.uk or ryanzhou@mit.edu" 
 
   # Academic websites
   academia         : # URL
